ajuste meta dados

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://colegiobabyavancar.com.br/" />
+    <meta property="twitter:url" content="https://baby-avancar.vercel.app/logo.png" />
     <meta property="twitter:title" content="Colégio Baby Avançar | Educação Infantil e Fundamental" />
     <meta property="twitter:description" content="Educação de qualidade do Infantil II ao 5º ano em Fortaleza." />
-    <meta property="twitter:image" content="https://colegiobabyavancar.com.br/img/logo.png" />
+    <meta property="twitter:image" content="https://baby-avancar.vercel.app//img/logo.png" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="img/logo.png" />
