correçao do endereço do google maps

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                       Ambiente seguro e acolhedor no coração do Jóquei Clube
                     </p>
                     <a
-                      href="https://www.google.com/maps/@-3.7697887,-38.5755027,3a,35.8y,145.09h,89.77t/data=!3m7!1e1!3m5!1s43iZ2fiyxRX9lQDPIs_ILQ!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D0.22914193304131913%26panoid%3D43iZ2fiyxRX9lQDPIs_ILQ%26yaw%3D145.09281839310023!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDcyMS4wIKXMDSoASAFQAw%3D%3D"
+                      href="https://www.google.com/maps/place/Col%C3%A9gio+Baby+Avan%C3%A7ar/@-3.7698812,-38.5754389,17z/data=!3m1!4b1!4m6!3m5!1s0x7c74ddbb534b0c1:0x15ab56a870ab817d!8m2!3d-3.7698812!4d-38.5754389!16s%2Fg%2F11vc58ksfn?entry=ttu&g_ep=EgoyMDI1MDcyMy4wIKXMDSoASAFQAw%3D%3D"
                       class="contact-btn location-btn"
                       target="_blank"
                     >
