refaturaçao do css

--- a/index.html
+++ b/index.html
@@ -65,16 +65,15 @@
     <link rel="apple-touch-icon" href="img/logo.png" />
 
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="css/style.css?v=1.2" as="style" />
+    <link rel="preload" href="css/components/main.css?v=2.0" as="style" />
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       as="style"
     />
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css?v=1.2" />
-    <link rel="stylesheet" href="css/mobile-menu-fix.css?v=1.0" />
+    <!-- Stylesheets - ESTRUTURA ORGANIZADA -->
+    <link rel="stylesheet" href="css/components/main.css?v=2.0" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -359,7 +358,7 @@
               <div class="extra-details">
                 <div class="extra-info">
                   <i class="fas fa-users"></i>
-                  <span>A partir de 4 anos</span>
+                  <span>A partir de 2 anos</span>
                 </div>
                 <div class="extra-info">
                   <i class="fas fa-clock"></i>
@@ -385,7 +384,7 @@
               <div class="extra-details">
                 <div class="extra-info">
                   <i class="fas fa-users"></i>
-                  <span>Todas as idades</span>
+                  <span>Do infantil IV  ao 5° ano</span>
                 </div>
                 <div class="extra-info">
                   <i class="fas fa-clock"></i>
@@ -498,7 +497,8 @@
                   </div>
                   <div class="contact-card-content">
                     <p class="contact-address">
-                      <strong>Jóquei Clube</strong><br />
+                      Silveira Filho, 375 -
+                      Jóquei Clube<br />
                       Fortaleza - CE
                     </p>
                     <p class="contact-description">
@@ -526,10 +526,7 @@
                       <span class="schedule-day">Segunda a Sexta:</span>
                       <span class="schedule-time">7h às 18h</span>
                     </div>
-                    <div class="schedule-item">
-                      <span class="schedule-day">Sábado:</span>
-                      <span class="schedule-time">8h às 12h</span>
-                    </div>
+                    
                     <p class="contact-description">
                       Atendimento presencial e telefônico
                     </p>
