ajuste do horario de atendimento

--- a/index.html
+++ b/index.html
@@ -519,12 +519,11 @@
                   <div class="contact-card-header">
                     <i class="fas fa-clock"></i>
 
-                    <h3>Horário de Funcionamento</h3>
+                    <h3>Horário de Atendimento</h3>
                   </div>
                   <div class="contact-card-content">
                     <div class="schedule-item">
-                      <span class="schedule-day">Segunda a Sexta:</span>
-                      <span class="schedule-time">7h às 18h</span>
+                      <span class="schedule-day">Comercial</span>
                     </div>
                     
                     <p class="contact-description">
