--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               <div class="extra-details">
                 <div class="extra-info">
                   <i class="fas fa-users"></i>
-                  <span>Do infantil IV  ao 5° ano</span>
+                  <span>Do infantil IV ao 5° ano</span>
                 </div>
                 <div class="extra-info">
                   <i class="fas fa-clock"></i>
@@ -497,8 +497,7 @@
                   </div>
                   <div class="contact-card-content">
                     <p class="contact-address">
-                      Silveira Filho, 375 -
-                      Jóquei Clube<br />
+                      Silveira Filho, 375 - Jóquei Clube<br />
                       Fortaleza - CE
                     </p>
                     <p class="contact-description">
@@ -525,7 +524,7 @@
                     <div class="schedule-item">
                       <span class="schedule-day">Comercial</span>
                     </div>
-                    
+
                     <p class="contact-description">
                       Atendimento presencial e telefônico
                     </p>
