atualizaçao das fotos

--- a/galeria.html
+++ b/galeria.html
@@ -213,28 +213,42 @@
             <!-- ATIVIDADES -->
             <div class="gallery-item" data-category="atividades">
               <img
-                src="img/galeria/atividades/atividade-1.png"
+                src="img/galeria/atividades/atividade-1.jpg"
                 alt="Atividades"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="atividades">
               <img
-                src="img/galeria/atividades/atividade-2.png"
+                src="img/galeria/atividades/atividade-2.jpg"
                 alt="Atividades"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="atividades">
               <img
-                src="img/galeria/atividades/atividade-3.png"
+                src="img/galeria/atividades/atividade-3.jpg"
                 alt="Atividades"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="atividades">
               <img
-                src="img/galeria/atividades/atividade-4.png"
+                src="img/galeria/atividades/atividade-4.jpg"
+                alt="Atividades"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="atividades">
+              <img
+                src="img/galeria/atividades/atividade-5.jpg"
+                alt="Atividades"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="atividades">
+              <img
+                src="img/galeria/atividades/atividade-6.jpg"
                 alt="Atividades"
                 onclick="openModal(this.src)"
               />
@@ -243,49 +257,261 @@
             <!-- EDUCAÇÃO -->
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/educacao-1.png"
+                src="img/galeria/educacao/educacao-1.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-3.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/edicacao-2.png"
+                src="img/galeria/educacao/educacao-4.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/educacao-3.png"
+                src="img/galeria/educacao/educacao-5.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/educacao-4.png"
+                src="img/galeria/educacao/educacao-6.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/educacao-5.png"
+                src="img/galeria/educacao/educacao-7.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/educacao-6.png"
+                src="img/galeria/educacao/educacao-8.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="educacao">
               <img
-                src="img/galeria/educacao/educacao-7.png"
+                src="img/galeria/educacao/educacao-9.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-10.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-11.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-12.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-13.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-14.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-15.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-16.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-17.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-18.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-19.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-20.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-21.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-22.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-23.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-24.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-25.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-26.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-27.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-28.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-29.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+           
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-31.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-32.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-33.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-34.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-35.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-36.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-37.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-38.jpg"
+                alt="Educação"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="educacao">
+              <img
+                src="img/galeria/educacao/educacao-39.jpg"
                 alt="Educação"
                 onclick="openModal(this.src)"
               />
@@ -294,49 +520,56 @@
             <!-- ESTRUTURA -->
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-1.png"
+                src="img/galeria/estrutura/estrutura-1.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-2.png"
+                src="img/galeria/estrutura/estrutura-2.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-3.png"
+                src="img/galeria/estrutura/estrutura-3.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-4.png"
+                src="img/galeria/estrutura/estrutura-4.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-5.png"
+                src="img/galeria/estrutura/estrutura-5.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-6.png"
+                src="img/galeria/estrutura/estrutura-6.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="estrutura">
               <img
-                src="img/galeria/estrutura/estrutura-7.png"
+                src="img/galeria/estrutura/estrutura-7.jpg"
+                alt="Estrutura"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="estrutura">
+              <img
+                src="img/galeria/estrutura/estrutura-8.jpg"
                 alt="Estrutura"
                 onclick="openModal(this.src)"
               />
@@ -345,56 +578,84 @@
             <!-- EVENTOS -->
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-1.png"
+                src="img/galeria/eventos/evento-1.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-2.png"
+                src="img/galeria/eventos/evento-2.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-3.png"
+                src="img/galeria/eventos/evento-3.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-4.png"
+                src="img/galeria/eventos/evento-4.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-5.png"
+                src="img/galeria/eventos/evento-5.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-6.png"
+                src="img/galeria/eventos/evento-6.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-7.png"
+                src="img/galeria/eventos/evento-7.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
             </div>
             <div class="gallery-item" data-category="eventos">
               <img
-                src="img/galeria/eventos/evento-8.png"
+                src="img/galeria/eventos/evento-8.jpg"
+                alt="Eventos"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-9.jpg"
+                alt="Eventos"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-10.jpg"
+                alt="Eventos"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-11.jpg"
+                alt="Eventos"
+                onclick="openModal(this.src)"
+              />
+            </div>
+            <div class="gallery-item" data-category="eventos">
+              <img
+                src="img/galeria/eventos/evento-12.jpg"
                 alt="Eventos"
                 onclick="openModal(this.src)"
               />
