ajuste logo do link

--- a/cursos-extras.html
+++ b/cursos-extras.html
@@ -39,7 +39,7 @@
     />
     <meta
       property="og:image"
-      content="https://colegiobabyavancar.com.br/img/logo.png"
+      content="https://baby-avancar.vercel.app/img/logo.png"
     />
     <meta property="og:locale" content="pt_BR" />
 
@@ -59,7 +59,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://colegiobabyavancar.com.br/img/logo.png"
+      content="https://baby-avancar.vercel.app/img/logo.png"
     />
 
     <!-- Favicon -->
