--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     />
     <meta name="author" content="Colégio Baby Avançar" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://colegiobabyavancar.com.br/" />
+    <link rel="canonical" href="https://baby-avancar.vercel.app/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://colegiobabyavancar.com.br/" />
+    <meta property="og:url" content="https://baby-avancar.vercel.app/" />
     <meta
       property="og:title"
       content="Colégio Baby Avançar | Educação Infantil e Fundamental"
@@ -36,7 +36,7 @@
     />
     <meta
       property="og:image"
-      content="https://colegiobabyavancar.com.br/img/logo.png"
+      content="https://baby-avancar.vercel.app/img/logo.png"
     />
     <meta property="og:locale" content="pt_BR" />
 
@@ -56,7 +56,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://baby-avancar.vercel.app//img/logo.png"
+      content="https://baby-avancar.vercel.app/img/logo.png"
     />
 
     <!-- Favicon -->
